--- a/index.html
+++ b/index.html
@@ -29,17 +29,15 @@
             </li>
             <li class="nav-link">
               <a href="#">
-                  <i class="icon-notification"></i>
-                  <div class="notification-count">9+</div>
-            </a>
+                <i class="icon-notification"></i>
+                <div class="notification-count">9+</div>
+              </a>
             </li>
             <li class="nav-link">
-              <a href="#"><i class="icon-chat"></i>
+              <a href="#"
+                ><i class="icon-chat"></i>
                 <div class="chat-count">6</div>
-
-            </a>
-
-
+              </a>
             </li>
             <li class="nav-link">
               <a href="#"><i class="icon-profile"></i></a>
