--- a/index.html
+++ b/index.html
@@ -54,6 +54,38 @@
       </div>
     </header>
 
+    <main>
+      <div class="main-container">
+        <div class="left-sidebar">
+          <div class="profile-box">
+            <img src="./images/Rectangle19.png" />
+
+            <div class="content-text">
+              <img src="./images/profileImg.png" />
+
+              <div class="name-job">
+                <div class="name">
+                  H.Hamid
+                  <img src="./images/LogoIn.png" />
+                </div>
+                <div class="job">Web Developer</div>
+              </div>
+
+              <span class="box-bar">
+                <span style="width: 50%" title="50%"></span>
+              </span>
+            </div>
+            <div class="box-bottom">
+              <img src="./images/Plus.png" />
+              <span>Add another account</span>
+            </div>
+          </div>
+        </div>
+        <div class="content">center</div>
+        <div class="right-sidebar">sag</div>
+      </div>
+    </main>
+
     <script src="app.js"></script>
   </body>
 </html>
